--- a/assets/src/scss/partials/_homepage.scss
+++ b/assets/src/scss/partials/_homepage.scss
@@ -141,6 +141,7 @@
       flex-basis: 386px;
       max-width: 386px;
       background-color: #fff;
+      padding-right: 15px;
 
       @media only screen and (max-width: $max-lg) {
          flex-basis: 70px;
@@ -171,7 +172,7 @@
 
       label {
          font-size: 17px;
-         padding-left: 18px;
+         padding-left: 15px;
          font-weight: 600;
       }
 
