--- a/assets/src/scss/partials/_homepage.scss
+++ b/assets/src/scss/partials/_homepage.scss
@@ -447,6 +447,7 @@ option{
       display: block;
       font-size: 15px;
       margin-bottom: 24px;
+      min-height: 66px;
    }
 
    &-duration {
