--- a/assets/src/scss/partials/_archive.scss
+++ b/assets/src/scss/partials/_archive.scss
@@ -531,4 +531,11 @@
 
 .section-post-archive{
     margin-bottom: 150px;
+
+	margin-top: 250px;
+
+	@media only screen and (max-width: $max-md) {
+		margin-top: 200px;
+	}
+
 }
