--- a/assets/src/scss/partials/_homepage.scss
+++ b/assets/src/scss/partials/_homepage.scss
@@ -51,19 +51,20 @@
 // Cruise Hero Extra
 .cruise-hero-extra {
    display: flex;
-       flex-wrap: wrap;
-       justify-content: space-between;
-       width: 100%;
-       margin: 35px auto 20px;
-       margin-bottom: auto;
-       gap: 20px;
-   
+   flex-wrap: wrap;
+   justify-content: space-between;
+   width: 100%;
+   margin: 35px auto 20px;
+   margin-bottom: auto;
+   gap: 20px;
+
    @media only screen and (max-width: $max-md) {
       flex-direction: column;
       align-items: center;
       margin: 25px auto 15px;
+      gap: 0px;
    }
-   
+
    &__item {
       // flex: 1;
       display: flex;
@@ -72,41 +73,41 @@
       text-align: center;
       padding: 0 15px;
       color: #fff;
-      
+
       @media only screen and (max-width: $max-md) {
          margin-bottom: 20px;
          width: 100%;
       }
    }
-   
+
    &__icon {
       margin-bottom: 15px;
-      
+
       img {
          max-width: 80px;
          height: auto;
-         
+
          @media only screen and (max-width: $max-md) {
-            max-width: 60px;
+            max-width: 22px;
          }
       }
    }
-   
+
    &__title {
       font-size: 18px;
       font-weight: bold;
       margin-bottom: 5px;
       text-transform: uppercase;
-      
+
       @media only screen and (max-width: $max-md) {
          font-size: 16px;
       }
    }
-   
+
    &__message {
       font-size: 16px;
       line-height: 1.3;
-      
+
       @media only screen and (max-width: $max-md) {
          font-size: 14px;
       }
@@ -126,6 +127,7 @@
       overflow: hidden;
 
       @media only screen and (max-width: $max-lg) {
+         margin-top: 60px;
          flex-direction: column;
          margin-bottom: 20px;
       }
@@ -185,6 +187,7 @@
       .arrow-down {
          margin-left: 4px;
          flex-shrink: 0;
+
          @media only screen and (max-width: $max-lg) {
             margin-left: 4px;
             margin-right: 20px;
@@ -207,10 +210,12 @@
          background-color: transparent;
          color: #fff;
          cursor: pointer;
+
          @media only screen and (max-width: $max-lg) {
             width: 100%;
 
          }
+
          &[type="submit"] {
             font-size: 13px;
             padding: 0;
@@ -218,9 +223,10 @@
             color: #fff;
             background: none;
          }
-option{
-   color: #0f1832;
-}
+
+         option {
+            color: #0f1832;
+         }
       }
 
       button {
@@ -509,8 +515,9 @@ option{
             margin: 0 auto;
             text-align: center;
          }
-         &__content{
-            > span{
+
+         &__content {
+            >span {
                font-size: 18px;
                margin-top: 4px;
                display: block;
