--- a/assets/src/scss/partials/_archive.scss
+++ b/assets/src/scss/partials/_archive.scss
@@ -397,7 +397,7 @@
         margin-bottom: 15px;
         position: relative;
         display: inline-block;
-        
+        line-height: 1.2;
         &:after {
             content: '';
             position: absolute;
