--- a/assets/src/scss/partials/_about_us.scss
+++ b/assets/src/scss/partials/_about_us.scss
@@ -131,6 +131,7 @@
          font-size: 18px;
          line-height: 1.3;
          padding-bottom: 22px;
+         letter-spacing: 2.5px;
       }
 
       .btn {
