--- a/assets/src/scss/partials/_main.scss
+++ b/assets/src/scss/partials/_main.scss
@@ -3,32 +3,20 @@
    ========================================================================== */
 html,
 body {
-	width: 100vw;
+	width: 100%;
 	height: 100%;
 	margin: 0;
 	padding: 0;
 
+	//overflow-x: hidden;
 	&.active {
 		overflow: hidden;
 
 		header {
 			background-color: #0f1832;
+			;
 		}
 	}
-}
-.single-destination .mb-auto{
-	@media only screen and (max-width: $max-md) {
-		padding-top: 100px;
-	}	
-}
-.single-cruise .mb-auto{
-	@media only screen and (max-width: $max-md) {
-		margin-bottom: 0px;
-	}	
-}
-body,
-#app {
-	overflow-x: hidden !important;
 }
 
 html {
@@ -39,18 +27,11 @@ html {
 	scroll-behavior: smooth;
 }
 
-html[lang="de-DE"] .container {
-	// transform: scale(1.02); /* Slight increase */
-	// transform-origin: top left;
-}
-
 .container {
-
 	&--header {
 		max-width: 1280px;
 	}
-
-	&--no-padding {
+	&--no-padding{
 		padding: 0;
 	}
 }
@@ -60,13 +41,13 @@ html[lang="de-DE"] .container {
 }
 
 .archive-destinations {
-	margin: 250px 0 0px;
+	margin: 200px 0 0px;
 	color: #0f1832;
 	line-height: 1.2;
 	text-align: center;
 
 	@media only screen and (max-width: $max-lg) {
-		margin: 200px 0 0px;
+		margin: 150px 0 0px;
 	}
 
 	h1 {
@@ -96,11 +77,7 @@ html[lang="de-DE"] .container {
 }
 
 .page-template-page-gallery,
-.page-template-default,
-.page-template-page-faq,
-.post-template-default,
-.page-template-page-post-archive,
-.archive {
+.page-template-default,.page-template-page-faq {
 	header {
 		background-color: #0f1832;
 	}
@@ -185,7 +162,6 @@ html[lang="de-DE"] .container {
 
 			.destination-content__text {
 				text-align: right;
-
 				@media only screen and (max-width: $max-md) {
 					text-align: center;
 				}
@@ -196,17 +172,15 @@ html[lang="de-DE"] .container {
 				display: block;
 			}
 
-			.btn {
+			.btn{
 				margin-left: auto;
 				margin-right: 0;
-
 				@media only screen and (max-width: $max-md) {
 					margin-right: auto;
 				}
 			}
 
 		}
-
 		&.no-image {
 			display: block;
 
@@ -217,11 +191,9 @@ html[lang="de-DE"] .container {
 				text-align: center !important;
 			}
 		}
-
 		&.image-left {
 			.destination-content__text {
 				text-align: left;
-
 				@media only screen and (max-width: $max-md) {
 					text-align: center;
 				}
@@ -243,15 +215,12 @@ html[lang="de-DE"] .container {
 				overflow: hidden;
 			}
 		}
-
-		.btn {
+		.btn{
 			margin-left: 0;
-
 			@media only screen and (max-width: $max-md) {
 				margin-left: auto;
 			}
 		}
-
 		&__text {
 			flex-basis: 500px;
 			max-width: 500px;
@@ -337,66 +306,16 @@ html[lang="de-DE"] .container {
 		margin-top: 130px;
 	}
 }
-
-button-widget {
+button-widget{
 	position: relative;
 	z-index: 999999999999;
 }
-
-.section--free-text {
+.section--free-text{
 	margin-top: 60px;
 }
-
-.section-image-gallery {
+.section-image-gallery{
 	margin-bottom: 100px;
-
 	@media only screen and (max-width: $max-md) {
 		margin-bottom: 50px;
 	}
-}
-
-.section--archive {
-	margin: 150px 0;
-}
-
-.section--news {
-	margin: 50px 0 150px;
-
-	@media only screen and (max-width: $max-md) {
-		margin: 50px 0 50px;
-	}
-
-	h2 {
-		font-size: 54px;
-		line-height: 1.1;
-		color: #0f1832;
-		margin-bottom: 25px;
-		text-align: center;
-
-		@media only screen and (max-width: $max-md) {
-			margin-bottom: 50px;
-			font-size: 32px;
-		}
-	}
-}
-
-.map-container {
-	margin-top: 20px;
-	position: relative;
-	width: 100%;
-	height: 0;
-	padding-bottom: 56.25%;
-	/* 16:9 aspect ratio */
-	overflow: hidden;
-	background: #f4f4f4;
-}
-
-/* Make the iframe fill the container */
-.map-container iframe {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border: 0;
 }
